--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "mongoose-sequence": "^5.3.1",
