--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "backend for ticketting app",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
+    "start": "node index",
+    "build": "tsc --w",
+    "dev": "tsc && ts-node ./built/server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +23,16 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "mongoose-sequence": "^5.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.7.23",
     "nodemon": "^2.0.19"
   }
 }
